Bulk of Order capabilities

--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -20,9 +20,14 @@
                     <td>@x.DrinkName</td>
                     <td>@x.DrinkDescription</td>
                     <td>@x.DrinkPrice</td>
-                    <td><a class="btn btn-info" asp-controller="Order" asp-action="Order">Order</a></td>
+                    
                 </tr>
                 }
                 </table>
-            }
+        }
+ 
+    
 </section>
+<div class="text-center">
+    <a class="btn btn-info" asp-controller="Order" asp-action="OrderForm">Order</a>
+</div>
