--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <a class="btn btn-outline-primary" asp-controller="Order" asp-action="Index">Patron</a>
-
-    <a class="btn btn-outline-primary" asp-action="Queue">Bartender</a>
+    <p class="display-4">Welcome to the Bartender App</p>
+    
+    <a class="btn btn-primary" asp-controller="Order" asp-action="Index">Patron</a>
+    <a class="btn btn-primary" asp-controller="Order" asp-action="CompletedOrders">Bartender</a>
 
 
 </div>
